<resources>
    <string name="app_name">Plan Equip Mate</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="to_login">To Login</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="join_us">join us</string>
    <string name="app">PlanEquipMate</string>
    <string name="description">Description</string>
    <string name="event_details">Event Details</string>
    <string name="home">Home</string>
    <string name="event_id">Event ID</string>
    <string name="join_event">Join Event</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copy_event_id_to_invite_friends">Copy Event ID to invite friends</string>
    <string name="join">join</string>
    <string name="equipment_list">Equipment List</string>
    <string name="no__events">No upcoming events for you.</string>
</resources>