<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="25"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="60sp"
        android:textColor="@color/colorSecondary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpNameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPhoneLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPasswordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpConfirmLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="30dp"
        app:iconGravity="start"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorSecondary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/to_login"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="30dp"
        app:iconGravity="start"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />

</LinearLayout>