<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="15"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="60sp"
        android:textColor="@color/colorSecondary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="30dp"
        app:iconGravity="start"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_us"
        android:textSize="24sp"
        android:textColor="@color/colorSecondary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToSignUp"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="30dp"
        app:iconGravity="start"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />

</LinearLayout>
