<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:gravity="center"
    tools:context=".JoinEvent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/joinEventLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_event"
        android:textSize="60sp"
        android:textColor="@color/colorSecondary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEventId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEventId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/event_id"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJoinEvent"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/join"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="30dp"
        app:iconGravity="start"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>