<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="10"
    tools:context=".EventDisplay">

    <TextView
        android:id="@+id/eventDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details"
        android:textSize="60sp"
        android:textColor="@color/colorSecondary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/event_name"
        android:textColor="@color/colorPrimaryVariant"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/location_on"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textEventLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorOnPrimary"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <ImageView
            android:id="@+id/imgCalender"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/calendar_month"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textEventDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorOnPrimary"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <ImageView
            android:id="@+id/imgTime"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/schedule"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textEventTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorOnPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgDesc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/description"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textEventDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorOnPrimary"/>


    </LinearLayout>

        <TextView
            android:id="@+id/textEventID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:gravity="center"
            android:textColor="@color/colorOnPrimary"/>

        <TextView
            android:id="@+id/textEventParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="participants"
            android:gravity="center"
            android:textColor="@color/colorOnPrimary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewParticipants"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/eventIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_event_id_to_invite_friends"
            android:textColor="@color/colorOnPrimary"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/clipboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/content_copy"
            android:contentDescription="@string/copy_to_clipboard"
            android:clickable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/textEquipmentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="show equipment list"
        android:gravity="center"
        android:textColor="@color/colorOnPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/deleteEvent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/delete"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>
